# twitterAPIexample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
Src/: CMakeLists.txt  DataProcessing.cpp  DataProcessing.hpp  Twitconfig.h.in
Test/: CMakeLists.txt  DataProcessingTest.cpp
